--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <form action="">
       <label for="nome">Nome</label>
-      <input type="text" id="nome" placeholder="Digite seu nome" />
+      <input type="name" id="nome" placeholder="Digite seu nome" />
 
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Digite seu email" />
 
       <label for="telefone">Telefone</label>
-      <input type="tel" id="telefone" placeholder="(xx) 00000-0000" />
+      <input type="tel" id="telefone" placeholder="(XX) 00000-0000" />
+
+      <a href="Forms1.html">Continuar</a>
     </form>
   </body>
 </html>
