--- a/Forms1.html
+++ b/Forms1.html
@@ -49,18 +49,18 @@
       <label for="enderço">Endereço</label>
       <input type="endereço" id="endereço" placeholder="Av; Rua; travessa" />
 
-      <label for="número">Nº</label>
-      <input type="número" id="numero" />
+      <label for="número" class="short">Nº</label>
+      <input type="numero" id="numero" />
 
       <label for="complemento">Complemento</label>
-      <input type="complemento" id="complemento" placeholder="apto; casa" />
+      <input type="complement" id="complemento" placeholder="apto; casa" />
 
       <label for="cep">Cep</label>
-      <input type="cep" name="" id="CEP" placeholder="Ex: 60.000-000" />
+      <input type="zipcode" name="" id="CEP" placeholder="Ex: 60.000-000" />
 
-      <a href="index.html">Voltar</a>
+      <a href="index.html" class="button">Voltar</a>
       
-      <a href="forms2.html">Continuar</a>
+      <a href="forms2.html" class="button">Continuar</a>
     </form>
     
   </body>
