--- a/forms2.html
+++ b/forms2.html
@@ -5,8 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <form action="">
+    
+    <a href="Forms1.html" class="button">Voltar</a>
+
+    <a href="#" class="button">Salvar</a>
+  </form>
   
 </body>
 </html>
