--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <label for="telefone">Telefone</label>
       <input type="tel" id="telefone" placeholder="(XX) 00000-0000" />
 
-      <a href="Forms1.html">Continuar</a>
+      <a href="Forms1.html" class="button">Continuar</a>
     </form>
   </body>
 </html>
