--- a/forms2.html
+++ b/forms2.html
@@ -10,10 +10,29 @@
 
 <body>
   <form action="">
+
+    <label for="Product">Produto</label>
+    <select name="Produto" id="produto">
+      <option value="Selecione">Selecione</option>
+      <option value="carro">Carro</option>
+      <option value="moto">Moto</option>
+      <option value="bike">bicicleta</option>
+      <option value="patinete">patinete</option>
+      <option value="skate">skate</option>,
+      <option value="patins">Patins</option>
+    </select>
+
+    <label for="marca">Marca</label>
+    <input type="marca" id="marca" placeholder="Ex: Honda; Toyota; Caloi">
+
+    <label for="reclamação">Reclamação</label>
+    <textarea name="Reclamação" id="" cols="30" rows="10" placeholder="digite aqui"></textarea>
+
+    <br>
     
     <a href="Forms1.html" class="button">Voltar</a>
 
-    <a href="#" class="button">Salvar</a>
+    <a href="#" class="button skip">Salvar</a>
   </form>
   
 </body>
