--- a/Forms1.html
+++ b/Forms1.html
@@ -11,6 +11,17 @@
 
   <body>
     <form action="">
+
+      <label for="região">Região</label>
+      <select name="" id="regiao">
+        <option value="Selecione">Selecione</option>
+        <option value="N">Norte</option>
+        <option value="NE">Nordeste</option>
+        <option value="CO">Centro-Oeste</option>
+        <option value="SE">Sudeste</option>
+        <option value="S">Sul</option>
+      </select>
+
       <label for="estado">Estado <span>*</span></label>
       <select name="" id="estado">
         <option value="Selecione">Selecione</option>
