--- a/index.html
+++ b/index.html
@@ -10,21 +10,54 @@
 
   <body>
     <form action="">
+      <h2>Cadastro do Aluno</h2>
       <label for="nome">Nome <span>*</span></label>
-      <input type="name" id="nome" maxlength="40" placeholder="Digite seu nome" />
-      
-      <label for="telefone">Telefone <span>*</span></label>
-      <input type="tel" id="telefone" size="12" maxlength="10" placeholder="(XX) 00000-0000" />
+      <input
+        type="name"
+        id="nome"
+        maxlength="40"
+        placeholder="Digite seu nome"
+      />
+
+      <label for="masculino" class="half-label">
+        <input type="radio" name="sexo" id="masculino" /> Masculino
+      </label>
+      <label for="feminino" class="half-label">
+        <input type="radio" name="sexo" id="feminino" /> Feminino
+      </label>
+
+      <label for="ensino-medio">
+        <input type="checkbox" id="ensino-medio" /> Ensino Médio
+      </label>
+
+      <label for="graduation">
+        <input type="checkbox" id="graduation"> Graduação
+      </label>
+
+      <label for="mestrado">
+        <input type="checkbox" id="mestrado"> Mestrado
+      </label>
 
       <label for="Nascimento">Data de Nascimento <span>*</span></label>
-      <input type="text" name="dia" size="2" maxlength="2" placeholder="dd"> 
-      <input type="text" name="mes" size="2" maxlength="2" placeholder="mm"> 
-      <input type="text" name="ano" size="4" maxlength="4" placeholder="aaaa">
+      <input type="text" name="dia" size="2" maxlength="2" placeholder="dd" />
+      <input type="text" name="mes" size="2" maxlength="2" placeholder="mm" />
+      <input type="text" name="ano" size="4" maxlength="4" placeholder="aaaa" />
+
+      <label for="grau escolar"> </label>
+
+      <label for="telefone">Telefone <span>*</span></label>
+      <input
+        type="tel"
+        id="telefone"
+        size="12"
+        maxlength="10"
+        placeholder="(XX) 00000-0000"
+      />
 
       <label for="email">Email <span>*</span></label>
       <input type="email" id="email" placeholder="Digite seu email" />
 
-      <br>
+      <br />
 
       <a href="Forms1.html" class="button skip">Continuar</a>
     </form>
